--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -1,7 +1,10 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
-      Ionic Blank
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
