Added a color + josefin font (an idea on styling born)

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -3,15 +3,15 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      Home
-    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <div>
+    Benvenuto nell'app Ionic Location Based Augmented Reality.
+    L'applicazione propone un'implementazione di realtà aumentata basata su geolocalizzazione
+    fatta in casa per mezzo dei sensori di movimento (accelerometro, gisoscopio e magnetometro),
+    del sistema di posizionamento geolocalizzato (gps), e di un servizio Rest che restituisce
+    un elenco di punti di interesse (poi) da mostrare.
   </div>
 </ion-content>
