--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -1,8 +1,13 @@
 <ion-header>
   <ion-toolbar mode="ios">
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-menu-button>
+        <ion-icon name="armenu" class="f-24"></ion-icon>
+      </ion-menu-button>
     </ion-buttons>
+    <ion-title>
+      Ionic Location AR
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
