Style on working

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -2,11 +2,11 @@
   <ion-toolbar mode="ios">
     <ion-buttons slot="start">
       <ion-menu-button>
-        <ion-icon name="armenu" class="f-24"></ion-icon>
+        <ion-icon name="armenu" class="f-26 c-white"></ion-icon>
       </ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Ionic Location AR
+      <span class="f-family-josefin f-20 f-weight-600 c-white">Ionic location based AR</span>
     </ion-title>
   </ion-toolbar>
 </ion-header>
