--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -1,8 +1,8 @@
 <ion-header>
-  <ion-toolbar mode="ios">
+  <ion-toolbar mode="ios" class="ar-toolbar">
     <ion-buttons slot="start">
       <ion-menu-button>
-        <ion-icon name="armenu" class="f-26 c-white"></ion-icon>
+        <ion-icon name="armenu" class="f-26 c-grey"></ion-icon>
       </ion-menu-button>
     </ion-buttons>
     <ion-title>
