Menu overlay component

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -19,4 +19,5 @@
     del sistema di posizionamento geolocalizzato (gps), e di un servizio Rest che restituisce
     un elenco di punti di interesse (poi) da mostrare.
   </div>
+  <menu-overlay></menu-overlay>
 </ion-content>
