Other pages style aligned

--- a/src/pages/map/map.page.html
+++ b/src/pages/map/map.page.html
@@ -1,14 +1,16 @@
 <ion-header>
-  <ion-toolbar mode="ios">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      Map
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar mode="ios" class="ar-toolbar">
+      <ion-buttons slot="start">
+        <ion-menu-button>
+          <ion-icon name="armenu" class="f-26 c-grey"></ion-icon>
+        </ion-menu-button>
+      </ion-buttons>
+      <ion-title>
+        <span class="f-family-josefin f-20 f-weight-600 c-white">Map</span>
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content>
-
+  <menu-overlay></menu-overlay>
 </ion-content>
