--- a/src/pages/about-author/about-author.page.html
+++ b/src/pages/about-author/about-author.page.html
@@ -1,14 +1,16 @@
 <ion-header>
-  <ion-toolbar mode="ios">
+  <ion-toolbar mode="ios" class="ar-toolbar">
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-menu-button>
+        <ion-icon name="armenu" class="f-26 c-grey"></ion-icon>
+      </ion-menu-button>
     </ion-buttons>
     <ion-title>
-      About the author
+      <span class="f-family-josefin f-20 f-weight-600 c-white">About the author</span>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <menu-overlay></menu-overlay>
 </ion-content>
