--- a/src/pages/augmented-reality/augmented-reality.page.html
+++ b/src/pages/augmented-reality/augmented-reality.page.html
@@ -26,8 +26,8 @@
   </div>
 
   <!-- ONLY DEBUG -->
-  <div style="position:absolute; top: 100px; left: 0;">
+  <!--<div style="position:absolute; top: 100px; left: 0;">
     <span *ngIf="fusionSensor$ | async as coord">alpha: {{coord.alfa}}<br>beta: {{coord.beta}}<br>gamma: {{coord.gamma}}<br></span>
-  </div>
+  </div>-->
 
 </ion-content>
