--- a/src/pages/augmented-reality/augmented-reality.page.html
+++ b/src/pages/augmented-reality/augmented-reality.page.html
@@ -27,7 +27,7 @@
 
   <!-- ONLY DEBUG -->
   <!--<div style="position:absolute; top: 100px; left: 0;">
-    <span *ngIf="fusionSensor$ | async as coord">alpha: {{coord.alfa}}<br>beta: {{coord.beta}}<br>gamma: {{coord.gamma}}<br></span>
+    <span class="f-24" *ngIf="fusionSensor$ | async as coord">alpha: {{coord.alfa}}<br>beta: {{coord.beta}}<br>gamma: {{coord.gamma}}<br></span>
   </div>-->
 
 </ion-content>
