--- a/src/pages/augmented-reality/augmented-reality.page.html
+++ b/src/pages/augmented-reality/augmented-reality.page.html
@@ -7,27 +7,34 @@
 </ion-header>
 
 <ion-content>
-  <!--<div ion-fixed class="spotContainer" (click)="closePoiDetails()">
-    <span *ngFor="let spot of spotsArray" [ngStyle]="{'left': spot.screenRelativePositionX + '%', 'top': spot.screenRelativePositionY + '%'}" (click)="openPoiDetails(spot['pin'], $event)">
-      <img src="../../assets/imgs/marker-poi.png" [ngStyle]="{'width': spot.relativeSize + '%', 'height': spot.relativeSize + '%'}"/>
-    </span>
-  </div>
+  <div ion-fixed class="spotContainer" (click)="closePoiDetails()">
+    <div class="marker" *ngFor="let spot of spotArray" [ngStyle]="{'left': spot.screenRelativePositionX + '%', 'top': spot.screenRelativePositionY + '%'}" (click)="openPoiDetails(spot, $event)">
+      <span>
+        <img src="../../assets/imgs/marker.png" [ngStyle]="{'width': spot.relativeSize + '%'}"/>
+      </span>
+      <span class="f-16 f-weight-600 f-family-josefin c-water-green">
+        {{(spot.distance / 1000).toFixed(2)}} Km
+      </span>
+    </div>
 
-  <div ion-fixed class="spotDetails bg-white" *ngIf="showDetails()">
-    <span class="f-18 f-medium f-uppercase c-dark">{{infosTitle}}</span>
-    <span class="f-16 f-regular c-dark" [innerHtml]="infosDescription"></span>
-  </div>
-  -->
-  <div ion-fixed class="spotContainer">
-    <span *ngFor="let spot of spotArray" [ngStyle]="{'left': spot.screenRelativePositionX + '%', 'top': spot.screenRelativePositionY + '%'}">
-    <!--<span>-->
-      <img src="../../assets/imgs/marker.png" [ngStyle]="{'width': spot.relativeSize + '%', 'height': spot.relativeSize + '%'}"/>
-    </span>
+    <!-- ONLY FOR DEBUG -->
+    <!--<div class="marker" style="top: 100px" (click)="openPoiDetailsDebug($event)">
+      <span>
+        <img src="../../assets/imgs/marker.png"/>
+      </span>
+      <span class="f-16 f-weight-600 f-family-josefin c-water-green">
+        1.34 Km
+      </span>
+    </div>-->
   </div>
 
   <!-- ONLY DEBUG -->
-  <!--<div style="position:absolute; top: 100px; left: 0;">
+  <div style="position:absolute; top: 100px; left: 0;">
     <span class="f-24" *ngIf="fusionSensor$ | async as coord">alpha: {{coord.alfa}}<br>beta: {{coord.beta}}<br>gamma: {{coord.gamma}}<br></span>
-  </div>-->
+  </div>
 
+  <div ion-fixed class="spotDetails bg-white" *ngIf="showDetails()">
+    <span class="f-18 f-weight-600 f-uppercase c-dark">{{infosTitle}}</span>
+    <span class="f-16 f-weight-400 c-dark" [innerHtml]="infosDescription"></span>
+  </div>
 </ion-content>
