--- a/src/pages/augmented-reality/augmented-reality.page.html
+++ b/src/pages/augmented-reality/augmented-reality.page.html
@@ -18,21 +18,21 @@
     </div>
 
     <!-- ONLY FOR DEBUG on ionic serve -->
-    <!--<div class="marker" style="top: 100px" (click)="openPoiDetailsDebug($event)">
+    <div class="marker" style="top: 300px; left: 30%;" (click)="openPoiDetailsDebug($event)">
       <span>
         <img src="../../assets/imgs/marker.png"/>
       </span>
       <span class="f-16 f-weight-600 f-family-josefin c-water-green">
         1.34 Km
       </span>
-    </div>-->
+    </div>
   </div>
 
   <!-- ONLY DEBUG on device -->
-  <!--<div style="position:absolute; top: 100px; left: 0;">
+  <div style="position:absolute; top: 100px; left: 0;">
     <span class="f-18" *ngIf="fusionSensor$ | async as coord">alpha: {{coord.alfa}}<br>beta: {{coord.beta}}<br>gamma: {{coord.gamma}}<br></span>
     <span class="f-18" *ngIf="cameraFov$ | async as fov">fov: {{fov}}</span>
-  </div>-->
+  </div>
 
   <div ion-fixed class="spotDetails bg-white" *ngIf="showDetails()">
     <span class="f-18 f-weight-600 f-uppercase c-dark">{{infosTitle}}</span>
