Small device responsive rules

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -2,11 +2,11 @@
   <ion-toolbar mode="ios" class="ar-toolbar">
     <ion-buttons slot="start">
       <ion-menu-button>
-        <ion-icon name="armenu" class="f-26 c-grey"></ion-icon>
+        <ion-icon name="armenu" class="ar-menu-icon f-26 c-grey"></ion-icon>
       </ion-menu-button>
     </ion-buttons>
     <ion-title>
-      <span class="f-family-josefin f-20 f-weight-600 c-white">Ionic location based AR</span>
+      <h4 class="f-family-josefin f-weight-600 c-white">Ionic location based AR</h4>
     </ion-title>
   </ion-toolbar>
 </ion-header>
