--- a/src/pages/augmented-reality/augmented-reality.page.html
+++ b/src/pages/augmented-reality/augmented-reality.page.html
@@ -11,7 +11,7 @@
   <div ion-fixed class="spotContainer">
     <div class="marker" *ngFor="let spot of spotArray" [ngStyle]="{'left': spot.screenRelativePositionX + '%', 'top': spot.screenRelativePositionY + '%'}">
       <span>
-        <img src="assets/images/marker.png" [ngStyle]="{'width': spot.relativeSize + '%'}"/>
+        <img src="assets/images/marker_red.png" [ngStyle]="{'width': spot.relativeSize + '%'}"/>
       </span>
       <span class="f-16 f-weight-600 f-family-josefin c-water-green">
         {{(spot.distance / 1000).toFixed(2)}} Km
@@ -21,7 +21,7 @@
     <!-- ONLY FOR DEBUG on ionic serve -->
     <!--<div class="marker" style="top: 300px; left: 30%;" (click)="openPoiDetailsDebug($event)">
       <span>
-        <img src="assets/images/marker.png"/>
+        <img src="assets/images/marker_red.png"/>
       </span>
       <span class="f-16 f-weight-600 f-family-josefin c-water-green">
         1.34 Km
