--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -1,20 +1,36 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar mode="ios" class="ar-toolbar">
+    <ion-buttons slot="start">
+      <ion-menu-button>
+        <ion-icon src="assets/icon/menu.svg" class="ar-menu-icon f-26"></ion-icon>
+      </ion-menu-button>
+    </ion-buttons>
     <ion-title>
-      Blank
+      <h4 class="f-family-josefin f-weight-600 c-white">Ionic location based AR</h4>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+<ion-content class="ar-container">
+  <!--<div class="mainContainer flippable-card" (click)="cardRotated = !cardRotated">
+    <div class="card-inner" [ngClass]="{rotated: cardRotated}">
+      <div class="front">
+        <div class="mainInfos">
+          <span class="title f-16 f-weight-600 c-grey">{{'WELCOME' | translate}}</span>
+          <p class="f-14 f-weight-400" [innerHtml]="'AR_MODULES' | translate"></p>
+        </div>
+        <div class="goToAlgorithmContainer">
+          <span class="f-18 f-weight-600 c-grey">{{'GO_TO_ALGORITHM' | translate}}</span>
+          <ion-icon name="arrow-forward" class="f-20 c-grey"></ion-icon>
+        </div>
+      </div>
+      <div class="back">
+        <span class="f-12 c-grey" [innerHtml]="'ALGORITHM_HEADER' | translate">
+        </span>
+        <span class="algorithmContent f-12" [innerHtml]="'ALGORITHM_CONTENT' | translate">
+        </span>
+      </div>
+    </div>
   </div>
+  <menu-overlay></menu-overlay>-->
 </ion-content>
