home page + some style changes

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -12,7 +12,7 @@
 </ion-header>
 
 <ion-content class="ar-container">
-  <!--<div class="mainContainer flippable-card" (click)="cardRotated = !cardRotated">
+  <div class="mainContainer flippable-card" (click)="cardRotated = !cardRotated">
     <div class="card-inner" [ngClass]="{rotated: cardRotated}">
       <div class="front">
         <div class="mainInfos">
@@ -32,5 +32,5 @@
       </div>
     </div>
   </div>
-  <menu-overlay></menu-overlay>-->
+  <menu-overlay></menu-overlay>
 </ion-content>
