added template pages

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -6,7 +6,7 @@
       </ion-menu-button>
     </ion-buttons>
     <ion-title>
-      <h4 class="f-family-josefin f-weight-600 c-white">Ionic location based AR</h4>
+      <h4 class="f-family-josefin f-weight-600 c-white">{{'HOME' | translate}}</h4>
     </ion-title>
   </ion-toolbar>
 </ion-header>
